--- a/ax/firepong.css
+++ b/ax/firepong.css
@@ -29,3 +29,29 @@ BODY, HTML { margin: 0px; padding: 0px; background-color: #000000; color: white;
 	color: #33FF00;
 
 }
+
+.paddle {
+
+	position: absolute;
+
+	background-color: #33FF00;
+
+	display: block;
+
+	height: 150px;
+
+	width: 25px;
+
+}
+
+#paddleplayer {
+
+	left: 0px;
+
+}
+
+#paddlecpu {
+
+	right: 0px;
+
+}
